[tool.poetry]
name = "great_expectation_sandbox"
version = "0.0.1"
description = "A tiny sandbox for great_expectation"
authors = ["Micha BA Kunze <mbakunze@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pandas = "~1.1.2"
great_expectations = "~0.12.7"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
